# PokerBot-Competition

./: README.md  bot_base.py  engine.py  game.py  main.py  pyproject.toml  requirements.txt
bots/: conservative_bot.py
src/pokerbots/: bot_template.py  frontend.py  game.py  main.py
src/pokerbots/bots/: __init__.py  all_in_bot.py  connor_bot.py  random_bot.py
tests/: test_regression.py
